...
  String get mustChooseOneVetSpecialty => 'Must choose at least one vet specialty';

  @override
  String get chooseVetSpecialties => 'Choose Vet Specialties';

  @override
  String get invalidEmailOrPassword => 'Invalid email or password';

  @override
  String get dataDoesNotExist => 'Data doesn\'t exist';

  @override
  String get petInfo => 'Pet Info';
...
